fix spacing of nav

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 nav {
     background-color: #1e1e1e;
     color: #ffffff;
-    padding: 0.39rem;
+    padding: 1.125rem 0;
 }
 
 .flex-nav {
@@ -68,6 +68,7 @@ nav ul,
 header ul {
     display: flex;
     padding: 0;
+    margin: 0;
 }
 
 nav ul.contact-info li span,
